--- a/index.html
+++ b/index.html
@@ -370,12 +370,26 @@
 <h5 class="title is-5">可解释性提升效果验证</h5>
 </div>
 </div>
+
+<div class="container is-max-desktop">
+<div class="columns is-centered has-text-centered">
+<div class="column is-four-fifths">
+    <div class="content has-text-justified">
+      <p>
+下面展示两个向推荐模型对齐后的大语言模型生成的推荐解释实例（来自Clothing数据集），便于直观评价推荐解释质量。
+具体而言，我们为大语言模型提供某一用户的历史交互物品序列，要求其生成针对待预测物品的推荐结果解释，并提示其综合考虑用户交互历史的行为模式、用户偏好与预测物品之间的一致性来生成解释。
+</p>
+</div>
+</div>
+</div>
+</div>
+<br>
   
 <div class="content has-text-justified">
 
 <div class="wrapper svelte-nab2ao" style="box-sizing: border-box;border-width: 2px;border-style: solid;border-color: #f66c0f;border-radius: 11px;padding: 25px;padding-top: 30px;padding-bottom: 30px;">
 
-    <div class="message-wrap svelte-1uvwjgr" style="width: 100%;">
+    <div class="message-wrap svelte-1uvwjgr" style="width: 50%;">
 
         <div class="message-row user-row svelte-1uvwjgr">
             <div class="avatar-container svelte-1uvwjgr">
@@ -412,7 +426,7 @@
 
 <div class="wrapper svelte-nab2ao" style="box-sizing: border-box;border-width: 2px;border-style: solid;border-color: #f66c0f;border-radius: 11px;padding: 25px;padding-top: 30px;padding-bottom: 30px;">
 
-    <div class="message-wrap svelte-1uvwjgr" style="width: 100%;">
+    <div class="message-wrap svelte-1uvwjgr" style="width: 50%; color="red"">
 
         <div class="message-row user-row svelte-1uvwjgr">
             <div class="avatar-container svelte-1uvwjgr">
