--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
         <div class="message-row user-row svelte-1uvwjgr">
             <div class="avatar-container svelte-1uvwjgr">
-                <img class="avatar-image svelte-1uvwjgr" src="./static/images/working.png" alt="avatar-user">
+                <img class="avatar-image svelte-1uvwjgr" src="./static/images/working.png" alt="avatar-user" width="20%">
             </div>
             <div data-testid="user" class="message user svelte-1uvwjgr" dir="ltr" style="border-style: solid;">
                 <span class="md svelte-9tftx4 chatbot">
@@ -405,7 +405,7 @@
 
         <div class="message-row bot-row svelte-1uvwjgr">
             <div class="avatar-container svelte-1uvwjgr">
-                <img class="avatar-image svelte-1uvwjgr" src="./static/images/robot.png" alt="avatar-bot"></div>
+                <img class="avatar-image svelte-1uvwjgr" src="./static/images/robot.png" alt="avatar-bot" width="20%"></div>
             <div data-testid="bot" class="message bot svelte-1uvwjgr" dir="ltr" style="border-style: solid;">
                 <span class="md svelte-9tftx4 chatbot">
                   <p>Based on the user's purchase history, which includes items such as handbags, compression shirts, jewelry, travel accessories, and costume pieces, it seems they have a diverse range of interests across fashion, accessories, and practical items. They seem to <span style="color: red;">prefer a mix of functional and stylish items, with a touch of uniqueness or novelty.</span>
@@ -430,7 +430,7 @@
 
         <div class="message-row user-row svelte-1uvwjgr">
             <div class="avatar-container svelte-1uvwjgr">
-                <img class="avatar-image svelte-1uvwjgr" src="./static/images/working.png" alt="avatar-user">
+                <img class="avatar-image svelte-1uvwjgr" src="./static/images/working.png" alt="avatar-user" width="20%">
             </div>
             <div data-testid="user" class="message user svelte-1uvwjgr" dir="ltr" style="border-style: solid;">
                 <span class="md svelte-9tftx4 chatbot">
@@ -442,7 +442,7 @@
 
         <div class="message-row bot-row svelte-1uvwjgr">
             <div class="avatar-container svelte-1uvwjgr">
-                <img class="avatar-image svelte-1uvwjgr" src="./static/images/robot.png" alt="avatar-bot"></div>
+                <img class="avatar-image svelte-1uvwjgr" src="./static/images/robot.png" alt="avatar-bot" width="20%"></div>
             <div data-testid="bot" class="message bot svelte-1uvwjgr" dir="ltr" style="border-style: solid;">
                 <span class="md svelte-9tftx4 chatbot">
                   <p>Based on the user's purchase history, it seems that the user <span style="color: red;">prefers items that are patriotic, fashionable, and stylish</span>. The user has purchased products like an American flag patch, a USA flag fanny pack, trendy shoes, fashionable blouses, and a retro high-waist bikini. These items suggest that the user has a preference for patriotic and stylish clothing and accessories.
