--- a/index.html
+++ b/index.html
@@ -384,7 +384,11 @@
 </div>
 </div>
 <br>
-  
+
+<div class="container is-max-desktop">
+        <div class="columns is-centered">
+            <div class="column is-full-width">
+              
 <div class="content has-text-justified">
 
 <div class="wrapper svelte-nab2ao" style="box-sizing: border-box;border-width: 2px;border-style: solid;border-color: #f66c0f;border-radius: 11px;padding: 25px;padding-top: 30px;padding-bottom: 30px;">
@@ -457,6 +461,10 @@
     </div>
 </div>
 </div>
+</div>
+</div>
+</div>
+    
 
 
   
