--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
 <div class="wrapper svelte-nab2ao" style="box-sizing: border-box;border-width: 2px;border-style: solid;border-color: #f66c0f;border-radius: 11px;padding: 25px;padding-top: 30px;padding-bottom: 30px;">
 
-    <div class="message-wrap svelte-1uvwjgr" style="width: 50%;">
+    <div class="message-wrap svelte-1uvwjgr" style="width: 100%;">
 
         <div class="message-row user-row svelte-1uvwjgr">
             <div class="avatar-container svelte-1uvwjgr">
@@ -430,7 +430,7 @@
 
 <div class="wrapper svelte-nab2ao" style="box-sizing: border-box;border-width: 2px;border-style: solid;border-color: #f66c0f;border-radius: 11px;padding: 25px;padding-top: 30px;padding-bottom: 30px;">
 
-    <div class="message-wrap svelte-1uvwjgr" style="width: 50%; color="red"">
+    <div class="message-wrap svelte-1uvwjgr" style="width: 100%">
 
         <div class="message-row user-row svelte-1uvwjgr">
             <div class="avatar-container svelte-1uvwjgr">
