--- a/index.html
+++ b/index.html
@@ -57,14 +57,20 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                77,
+                代新林,
               </span>
                 <span class="author-block">
-                  77,
+                  李佳琦,
                 </span>
                   <span class="author-block">
-                   77
+                   马旭华
                   </span>
+              <span class="author-block">
+                胡傲轩,
+              </span>
+              <span class="author-block">
+                张宇欣,
+              </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
