--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 胡傲轩,
               </span>
               <span class="author-block">
-                张宇欣,
+                张宇欣
               </span>
                   </div>
 
