--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   李佳琦,
                 </span>
                   <span class="author-block">
-                   马旭华
+                   马旭华，
                   </span>
               <span class="author-block">
                 胡傲轩,
